fix: ensure privacy table alignment for Moz Accounts works across all locales
The previous dependency on an ID overlooked the fact that it was drawn from localisable content

--- a/media/css/privacy/privacy-protocol.scss
+++ b/media/css/privacy/privacy-protocol.scss
@@ -296,6 +296,8 @@ $border: 2px solid $color-marketing-gray-20;
 // * -------------------------------------------------------------------------- */
 // Mozilla accounts page variant
 
-#lawful-bases + .mzp-u-data-table td {
-  vertical-align: top;
+.mozilla-accounts {
+    .mzp-u-data-table td {
+        vertical-align: top;
+    }
 }
